UIP-3925: Square tile alignment issue

--- a/packages/ui-library/src/css/_buttons.scss
+++ b/packages/ui-library/src/css/_buttons.scss
@@ -707,6 +707,7 @@ button.tile-button {
         word-break: break-word;
 
         &--square {
+            flex-grow: 1;
             margin-top: 0;
         }
     }
@@ -726,7 +727,6 @@ button.tile-button {
     }
 
     &--square {
-        align-self: flex-start;
         flex-basis: 165px;
         flex-grow: 0;
         min-height: 165px;
